# datv_repeater

./: README.md  config.txt  install.sh  run.sh  update.sh
406/: config.txt  config_mail.pl  config_mail.txt  dec406_V6  dec406_V6.c  decode.sh  decode_osm.sh  install.sh  scan.sh  scan406.pl  stop.sh
arduino/HDMI_TC_V2/: HDMI_TC_V2.ino
arduino/convertisseur_de_niveau/: convertisseur_de_niveau.ino
config/: default.pa  default.pa_rpi  tcm.php
dvbsdr/: detect_platform.sh  install.sh
dvbsdr/scripts/: config.txt  jetson_nano.sh  tx.sh  tx_graphic.sh
dvbsdr/scripts/include/: limerf.sh  nanoencode.sh
dvbtx/: install.sh
dvbtx/scripts/: TXstop.sh  TXstop.sh.old  TXstop_rpi.sh  bitrate_dvb-t.sh  config.txt  config_rpi.txt  pluto_error.sh  pluto_reboot.sh  pluto_stop.sh  tx.sh  tx.sh.old  tx_rpi.sh  watchdog.sh
film/: film.mpg
longmynd/: Makefile  README.md  config.txt  errors.h  ftdi.c  ftdi_usb.c  full_rx.c  infos.c  infos.txt  longmynd.1  main.c  main.h  nim.h  rx.desktop  rx.sh  rx_graphic.sh  stv0910.c  stv0910.h  stv6120.c  stv6120.h  ts.c  update.sh
multimon/: CMakeLists.txt  demod_dtmf.c  fix_udev_gpio.sh  jetsonGPIO.h  multimon.h  setup_gpio.sh  stream.sh  unixinput.c
multimon-ng/: CMakeLists.txt  demod_dtmf.c  multimon-ng.pro  multimon.h  unixinput.c
multimon_rpi/: CMakeLists.txt  demod_dtmf.c  multimon.1  multimon.desktop  multimon.h  multimon.pro  unixinput.c
source/: config.txt  rx_video.sh
